# baseCpp

./: CMakeLists.txt  conanfile.txt
profiles/: windows
